--- a/module_3/index.html
+++ b/module_3/index.html
@@ -12,48 +12,50 @@
 </head>
 
 <body>
-  <header class="margin">
-    <a href="http://yurirashevsky.github.io/" target="_blank">
-      <img class="logo" src="img/logo.png" alt="Логотип">
-    </a>
-  </header>
-  <nav class="margin main-menu">
-    <ul>
-      <li><a class="first-m-menu-item" href="#">Главная</a></li>
-      <li><a class="m-menu-item" href="#">Товары</a></li>
-      <li><a class="m-menu-item" href="#">О_нас</a></li>
-      <li><a class="m-menu-item" href="#">Контакты</a></li>
-    </ul>
-  </nav>
-  <main class="margin">
-    <aside class="sidebar">
+  <div class="wrapper">
+    <header class="margin">
+      <a href="http://yurirashevsky.github.io/" target="_blank">
+        <img class="logo" src="img/logo.png" alt="Логотип">
+      </a>
+    </header>
+    <nav class="margin main-menu">
       <ul>
-        <li><a class="sidebar-item" href="#">Ноутбуки</a></li>
-        <li><a class="sidebar-item" href="#">Планшеты</a></li>
-        <li><a class="sidebar-item" href="#">Телефоны</a></li>
-        <li><a class="sidebar-item" href="#">Телевизоры</a></li>
-        <li><a class="sidebar-item" href="#">Бытовая техника</a></li>
-        <li><a class="sidebar-item" href="#">Атовтовары</a></li>
+        <li><a class="first-m-menu-item" href="#">Главная</a></li>
+        <li><a class="m-menu-item" href="#">Товары</a></li>
+        <li><a class="m-menu-item" href="#">О_нас</a></li>
+        <li><a class="m-menu-item" href="#">Контакты</a></li>
       </ul>
-    </aside>
-    <article class="bicycle">
-      <div class="frame">
-        <img src="img/image.jpg" alt="Велосипед" title="Велосипед">
-      </div>
-      <p>
-        Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила
-        п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки
-        програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
-      </p>
-    </article>
-  </main>
-  <footer class="margin links">
-    <a href="#" target="_blank">Главная</a>
-    <a href="#" target="_blank">Товары</a>
-    <a href="#" target="_blank">О_нас</a>
-    <a href="#" target="_blank">Контакты</a>
-    <p class="copy">2014 &copy; All rights reserved</p>
-  </footer>
+    </nav>
+    <main class="margin">
+      <aside class="sidebar">
+        <ul>
+          <li><a class="sidebar-item" href="#">Ноутбуки</a></li>
+          <li><a class="sidebar-item" href="#">Планшеты</a></li>
+          <li><a class="sidebar-item" href="#">Телефоны</a></li>
+          <li><a class="sidebar-item" href="#">Телевизоры</a></li>
+          <li><a class="sidebar-item" href="#">Бытовая техника</a></li>
+          <li><a class="sidebar-item" href="#">Атовтовары</a></li>
+        </ul>
+      </aside>
+      <article class="bicycle">
+        <div class="frame">
+          <img src="img/image.jpg" alt="Велосипед" title="Велосипед">
+        </div>
+        <p>
+          Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила
+          п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно
+          завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
+        </p>
+      </article>
+    </main>
+    <footer class="margin links">
+      <a href="#" target="_blank">Главная</a>
+      <a href="#" target="_blank">Товары</a>
+      <a href="#" target="_blank">О_нас</a>
+      <a href="#" target="_blank">Контакты</a>
+      <p class="copy">2014 &copy; All rights reserved</p>
+    </footer>
+  </div>
 </body>
 
 </html>
