--- a/module_4_css/index.html
+++ b/module_4_css/index.html
@@ -121,7 +121,7 @@
         <p>Lorem ipsum dolor sit amet</p>
       </section>
       <div class="the-hole">
-
+        <div class="arrow-down"></div>
       </div>
       <section class="news">
         <h2 class="section-name">Новости</h2>
