--- a/module_4_css/index.html
+++ b/module_4_css/index.html
@@ -83,7 +83,7 @@
           </ul>
         </li>
         <li>
-          <a href="#">Услуги</a>
+          <a class="arrow-down" href="#">Услуги</a>
           <ul class="submenu">
             <li><a href="#">Услуги 1</a></li>
             <li><a href="#">Услуги 2</a></li>
@@ -91,7 +91,7 @@
           </ul>
         </li>
         <li>
-          <a href="#">Партнёрам</a>
+          <a class="arrow-down" href="#">Партнёрам</a>
           <ul class="submenu">
             <li><a href="#">Партнёрам 1</a></li>
             <li><a href="#">Партнёрам 2</a></li>
