--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="module_3-bonus/index.html" target="_blank" title="Открыть домашнюю работу №3 Бонус">Homework #3 Bonus</a>
             <a href="module_4/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (svg icon)</a>
             <a href="module_4_css/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (css icon)</a>
+            <a href="module_4_symbol/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (symbol icon)</a>
         </nav>
     </header>
 </body>
