--- a/module_4_css/index.html
+++ b/module_4_css/index.html
@@ -16,9 +16,7 @@
       <div class="header-t">
         <a href="http://yurirashevsky.github.io/" target="_blank">
           <img class="logo" src="img/logo.png" alt="Логотип">
-          <p class="descript">
-            Путешествия по Азии
-          </p>
+          <span class="descript">Путешествия по Азии</span>
         </a>
         <address class="contacts">
           <h2 class="contacts-h">Наши контакты:</h2>
@@ -30,43 +28,43 @@
           <li>
             <a href="#" target="_blank">
               <img src="img/i_flag.png" alt="Флаг Индии">
-              <p>Индия</p>
+              <span>Индия</span>
             </a>
           </li>
           <li>
             <a href="#" target="_blank">
               <img src="img/n_flag.png" alt="Флаг Индии">
-              <p>Непал</p>
+              <span>Непал</span>
             </a>
           </li>
           <li>
             <a href="#" target="_blank">
               <img src="img/t_flag.png" alt="Флаг Индии">
-              <p>Тибет</p>
+              <span>Тибет</span>
             </a>
           </li>
           <li>
             <a href="#" target="_blank">
               <img src="img/b_flag.png" alt="Флаг Индии">
-              <p>Бутан</p>
+              <span>Бутан</span>
             </a>
           </li>
           <li>
             <a href="#" target="_blank">
               <img src="img/s_flag.png" alt="Флаг Индии">
-              <p>Шри-Лпнка</p>
+              <span>Шри-Лпнка</span>
             </a>
           </li>
           <li>
             <a href="#" target="_blank">
               <img src="img/m_flag.png" alt="Флаг Индии">
-              <p>Мальдивы</p>
+              <span>Мальдивы</span>
             </a>
           </li>
         </ul>
       </div>
       <div class="header-bm">
-        <img src="img/photo.png" alt="Срочно загружайте фото!" />
+        <img src="img/photo.png" alt="Срочно загружайте фото!">
       </div>
     </header>
     <nav class="menu">
@@ -148,8 +146,8 @@
     </main>
   </div>
   <footer class="copy">
-      <p>Copyright&copy; asia-holidays.com 2010</p>
-    </footer>
+    <p>Copyright&copy; asia-holidays.com 2010</p>
+  </footer>
 </body>
 
 </html>
