--- a/index.html
+++ b/index.html
@@ -2,26 +2,56 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GoIT Homeworks</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>GoIT Homeworks</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+  <div class="homework">
     <header>
-        <h1>GoIT FE5 Tech Skills Homeworks</h1>
-        <nav>
-            <a href="module_1-2/index.html" target="_blank" title="Открыть домашнюю работу №1-2">Homework #1-2</a>
-            <a href="module_3/index.html" target="_blank" title="Открыть домашнюю работу №3">Homework #3</a>
-            <a href="module_3-bonus/index.html" target="_blank" title="Открыть домашнюю работу №3 Бонус">Homework #3 Bonus</a>
-            <a href="module_4/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (svg icon)</a>
-            <a href="module_4_css/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (css icon)</a>
-            <a href="module_4_symbol/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (symbol icon)</a>
-        </nav>
+      <h1>GoIT FE5 Tech Skills Homeworks</h1>
     </header>
+    <section>
+      <h2 class="object">HTML</h2>
+      <section class="task">
+        <h3 class="number">Module #1-2</h3>
+        <ul>
+          <li>
+            <a href="goitfe5homeworks\html\module_1-2\index.html" target="_blank" title="Открыть домашнюю работу №1-2">Homework #1-2</a>
+          </li>
+        </ul>
+      </section>
+      <section class="task">
+        <h3 class="number">Module #3</h3>
+        <ul>
+          <li>
+            <a href="goitfe5homeworks\html\module_3\index.html" target="_blank" title="Открыть домашнюю работу №3">Homework #3</a>
+          </li>
+          <li>
+            <a href="#" target="_blank" title="Открыть домашнюю работу №3 Дополнительное задание">Homework #3 Bonus</a>
+          </li>
+        </ul>
+      </section>
+      <section class="task">
+        <h3 class="number">Module #4</h3>
+        <ul>
+          <li>
+            <a href="goitfe5homeworks\html\module_4_svg\index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (svg icon)</a>
+          </li>
+          <li>
+            <a href="module_4_css/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (css icon)</a>
+          </li>
+          <li>
+            <a href="module_4_symbol/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (symbol icon)</a>
+          </li>
+        </ul>
+      </section>
+    </section>
+  </div>
 </body>
 
 </html>
