Added some links

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <h3 class="number">Module #4</h3>
         <ul>
           <li>
+            <a href="goitfe5homeworks\html\module_4_css\index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (css icon)</a>
+          </li>
+          <li>
             <a href="goitfe5homeworks\html\module_4_svg\index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (svg icon)</a>
           </li>
           <li>
-            <a href="module_4_css/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (css icon)</a>
-          </li>
-          <li>
-            <a href="module_4_symbol/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (symbol icon)</a>
+            <a href="goitfe5homeworks\html\module_4_symbol\index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (symbol icon)</a>
           </li>
         </ul>
       </section>
