Some Homework 4 Added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3 class="number">Module #1-2</h3>
         <ul>
           <li>
-            <a href="goitfe5homeworks\html\module_1-2\index.html" target="_blank" title="Открыть домашнюю работу №1-2">Homework #1-2</a>
+            <a href="goitfe5homeworks\html\module_1-2\index.html" target="_blank" title="Перейти">Homework #1-2</a>
           </li>
         </ul>
       </section>
@@ -29,10 +29,10 @@
         <h3 class="number">Module #3</h3>
         <ul>
           <li>
-            <a href="goitfe5homeworks\html\module_3\index.html" target="_blank" title="Открыть домашнюю работу №3">Homework #3</a>
+            <a href="goitfe5homeworks\html\module_3\index.html" target="_blank" title="Перейти">Homework #3</a>
           </li>
           <li>
-            <a href="#" target="_blank" title="Открыть домашнюю работу №3 Дополнительное задание">Homework #3 Bonus</a>
+            <a href="#" target="_blank" title="Перейти">Homework #3 Bonus</a>
           </li>
         </ul>
       </section>
@@ -40,13 +40,19 @@
         <h3 class="number">Module #4</h3>
         <ul>
           <li>
-            <a href="goitfe5homeworks\html\module_4_css\index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (css icon)</a>
+            <a href="goitfe5homeworks\html\module_4_css_1\index.html" target="_blank" title="Перейти">Homework #4-1 (Работа выполнена способом подстановки фона. Иконки меню - CSS)</a>
           </li>
           <li>
-            <a href="goitfe5homeworks\html\module_4_svg\index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (svg icon)</a>
+            <a href="goitfe5homeworks\html\module_4_css_2\index.html" target="_blank" title="Перейти">Homework #4-2 (Работа выполнена способом ... Иконки меню - CSS)</a>
           </li>
           <li>
-            <a href="goitfe5homeworks\html\module_4_symbol\index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (symbol icon)</a>
+            <a href="goitfe5homeworks\html\module_4_css_3\index.html" target="_blank" title="Перейти">Homework #4-3 (Работа выполнена способом ... Иконки меню - CSS)</a>
+          </li>
+          <li>
+            <a href="goitfe5homeworks\html\module_4_svg\index.html" target="_blank" title="Перейти">Homework #4 (svg icon)</a>
+          </li>
+          <li>
+            <a href="goitfe5homeworks\html\module_4_symbol\index.html" target="_blank" title="Перейти">Homework #4 (symbol icon)</a>
           </li>
         </ul>
       </section>
