--- a/goitfe5homeworks/html/module_4_css_2/index.html
+++ b/goitfe5homeworks/html/module_4_css_2/index.html
@@ -100,7 +100,7 @@
         <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
-    <main class="content">
+    <main class="content group">
       <section class="info">
         <h2 class="section-name">Информация</h2>
         <p>Lorem ipsum dolor sit amet</p>
@@ -112,9 +112,6 @@
         <p>Lorem ipsum dolor sit amet</p>
         <p>Lorem ipsum dolor sit amet</p>
       </section>
-      <div class="the-hole">
-        <div class="arrow-down"></div>
-      </div>
       <section class="news">
         <h2 class="section-name">Новости</h2>
         <p>Lorem ipsum dolor sit amet</p>
@@ -131,6 +128,7 @@
         <p>Lorem ipsum dolor sit amet</p>
         <p>Lorem ipsum dolor sit amet</p>
       </section>
+      <div class="the-hole"></div>
     </main>
   </div>
   <footer class="copy">
