Some Homework 4 Added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="goitfe5homeworks\html\module_4_css_1\index.html" target="_blank" title="Перейти">Homework #4-1 (Работа выполнена способом подстановки фона. Иконки меню - CSS)</a>
           </li>
           <li>
-            <a href="goitfe5homeworks\html\module_4_css_2\index.html" target="_blank" title="Перейти">Homework #4-2 (Работа выполнена способом ... Иконки меню - CSS)</a>
+            <a href="goitfe5homeworks\html\module_4_css_2\index.html" target="_blank" title="Перейти">Homework #4-2 (Работа выполнена способом длинных колонок. Иконки меню - CSS)</a>
           </li>
           <li>
             <a href="goitfe5homeworks\html\module_4_css_3\index.html" target="_blank" title="Перейти">Homework #4-3 (Работа выполнена способом ... Иконки меню - CSS)</a>
