--- a/goitfe5homeworks/html/module_4_css_3/index.html
+++ b/goitfe5homeworks/html/module_4_css_3/index.html
@@ -112,9 +112,7 @@
         <p>Lorem ipsum dolor sit amet</p>
         <p>Lorem ipsum dolor sit amet</p>
       </section>
-      <div class="the-hole">
-        <div class="arrow-down"></div>
-      </div>
+      <div class="the-hole"></div>
       <section class="news">
         <h2 class="section-name">Новости</h2>
         <p>Lorem ipsum dolor sit amet</p>
