--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="goitfe5homeworks\html\module_4_css_2\index.html" target="_blank" title="Перейти">Homework #4-2 (Работа выполнена способом длинных колонок. Иконки меню - CSS)</a>
           </li>
           <li>
-            <a href="goitfe5homeworks\html\module_4_css_3\index.html" target="_blank" title="Перейти">Homework #4-3 (Работа выполнена способом ... Иконки меню - CSS)</a>
+            <a href="goitfe5homeworks\html\module_4_css_3\index.html" target="_blank" title="Перейти">Homework #4-3 (Работа выполнена способом обертывающих блоков. Иконки меню - CSS)</a>
           </li>
           <li>
             <a href="goitfe5homeworks\html\module_4_svg\index.html" target="_blank" title="Перейти">Homework #4 (svg icon)</a>
