--- a/index.html
+++ b/index.html
@@ -47,7 +47,18 @@
           </li>
           <li>
             <a href="goitfe5homeworks\html\module_4_css_3\index.html" target="_blank" title="Перейти">Homework #4-3 (Работа выполнена способом обертывающих блоков. Иконки меню - CSS)</a>
-          </li>          
+          </li>
+        </ul>
+      </section>
+      <section class="task">
+        <h3 class="number">Module #5</h3>
+        <ul>
+          <li>
+            <a href="goitfe5homeworks\html\module_5_1\index.html" target="_blank" title="Перейти">Homework #5-1 (...)</a>
+          </li>
+          <li>
+            <a href="#" target="_blank" title="Перейти">Homework #5-2 (...)</a>
+          </li>
         </ul>
       </section>
     </section>
