--- a/goitfe5homeworks/html/module_4_css_2/index.html
+++ b/goitfe5homeworks/html/module_4_css_2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -19,7 +19,7 @@
           <span class="descript">Путешествия по Азии</span>
         </a>
         <address class="contacts">
-          <h2 class="contacts-h">Наши контакты:</h2>
+          <span class="contacts-h">Наши контакты:</span><br>
           +9 098 765 4321 <br>
           +9 012 345 6890 <br>
           <a href="mailto:info@asia-holidays.com">info@asia-holidays.com</a>
