--- a/goitfe5homeworks/html/module_4_css_1/index.html
+++ b/goitfe5homeworks/html/module_4_css_1/index.html
@@ -103,83 +103,37 @@
     <main class="content">
       <section class="info">
         <h2 class="section-name">Информация</h2>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
+        <p>
+          Равным образом начало повседневной работы по формированию позиции в значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения соответствующий условий активизации.
+        </p>
+        <p>
+          Равным образом начало повседневной работы по формированию позиции в      значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения соответствующий условий активизации.
+        </p>
+        <p>
+          Равным образом начало повседневной работы по формированию позиции в значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения соответствующий условий активизации.
+        </p>
       </section>
       <div class="the-hole"></div>
       <section class="news">
         <h2 class="section-name">Новости</h2>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
-        <p>Lorem ipsum dolor sit amet</p>
+        <p>
+          Равным образом начало повседневной работы по формированию позиции в значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения соответствующий условий активизации.
+        </p>
+        <p>
+          Равным образом начало повседневной работы по формированию позиции в      значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения соответствующий условий активизации.
+        </p>
+        <p>
+          Равным образом начало повседневной работы по формированию позиции в значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения соответствующий условий активизации.
+        </p>
+        <p>
+          Равным образом начало повседневной работы по формированию позиции в значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения соответствующий условий активизации.
+        </p>
+        <p>
+          Равным образом начало повседневной работы по формированию позиции в      значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения соответствующий условий активизации.
+        </p>
+        <p>
+          Равным образом начало повседневной работы по формированию позиции в значительной степени обуславливает создание систем массового участия. Задача организации, в особенности же начало повседневной работы по формированию позиции требуют определения и уточнения соответствующий условий активизации.
+        </p>
       </section>
     </main>
   </div>
