--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -1,57 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>Forma</title>
-  <style media="screen">
-  * {
-    margin: 0;
-    padding: 0;
-  }
-  .parent {
-    position: relative;
-    height: 100px;
-    background-color: green
-  }
-  .box1 {
-    position: absolute;
-    bottom: 15px;
-    border: 1px solid black;
-    text-decoration: none;
-  }
-  .menu {
-     position: relative;
-     overflow: hidden;
-  }
-  .menu li {
-    float: left;
-    border: 1px solid black;
-    margin: 0 15px;
-    padding: 5px;
-    list-style: none;
-  }
-  .menu a{
-    text-decoration: none;
-  }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
-
 <body>
-  <!-- <div class="parent">
-    <div class="box1">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-  </div> -->
-  <ul class="menu">
-    <li><a href="#">Пункт 1</a></li>
-    <li><a href="#">Пункт 2</a></li>
-    <li><a href="#">Пункт 3</a></li>
-    <li><a href="#">Пункт 4</a></li>
-    <li><a href="#">Пункт 5</a></li>
-  </ul>
-</body>
+  <table>
+    <thead>
+      <tr>
+        <th>...</th>
+        <th>...</th>
+        <th>...</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+      </tr>
+      <tr>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+      </tr>
+    </tbody>
+  </table>
 
+</body>
 </html>
